tests/negative/regression/r0.orng
// r0.orng:5:18: error: member `Float` not in symbol `a`
// const a: a::Float = 0
//                 ^
// 
const a: a::Float = 0